Adding Neo4j Docker example from gremlin-orm-neo4j

--- a/docker-compose.orientdb.yaml
+++ b/docker-compose.orientdb.yaml
@@ -16,7 +16,8 @@ services:
       - ./data/orientdb/databases:/orientdb/databases
     environment:
       ORIENTDB_ROOT_PASSWORD: root
-    hostname: "orientdb"
+    # hostname: "orientdb"
+    hostname: "gremlin"
     networks:
       - gremlinfs
     ports:
