wip, upgrading gremlin

--- a/gremlin-server-neo4j/Dockerfile
+++ b/gremlin-server-neo4j/Dockerfile
@@ -1,12 +1,8 @@
 FROM openjdk:8-alpine
 # MAINTAINER gremlinorm <https://github.com/gremlin-orm>
 
-RUN whoami
-
 # ARG GREMLIN_VERSION=3.2.6
 ARG GREMLIN_VERSION=3.3.7
-# ARG GREMLIN_VERSION=3.4.2
-# ARG GREMLIN_VERSION=3.3.11
 
 # ARG BUILD_DATE
 # ARG VCS_REF
@@ -22,26 +18,12 @@ RUN apk add --update bash && rm -rf /var/cache/apk/* && \
      chmod +x /gremlin-server/bin/gremlin-server.sh && \
      rm /tmp/gremlin-server.zip
 
-# http://mirror.math.princeton.edu/pub/apache/tinkerpop/3.3.11/
-# RUN apk add --update bash && rm -rf /var/cache/apk/* && \
-#     wget -O /tmp/gremlin-server.zip http://mirror.math.princeton.edu/pub/apache/tinkerpop/$GREMLIN_VERSION/apache-tinkerpop-gremlin-server-$GREMLIN_VERSION-bin.zip && \
-#     unzip /tmp/gremlin-server.zip -d / && \
-#     mv /apache-tinkerpop-gremlin-server-$GREMLIN_VERSION/ /gremlin-server/ && \
-#     chmod +x /gremlin-server/bin/gremlin-server.sh && \
-#     rm /tmp/gremlin-server.zip
-
-# WORKDIR /gremlin-server/
-
-# RUN mkdir -p /.groovy/
-RUN mkdir -p /root/.groovy/
-
-# COPY grapeConfig.xml /.groovy/grapeConfig.xml
-COPY grapeConfig.xml /root/.groovy/grapeConfig.xml
-
 WORKDIR /gremlin-server/
 
-# RUN /bin/bash -c "/gremlin-server/bin/gremlin-server.sh install org.apache.tinkerpop neo4j-gremlin $GREMLIN_VERSION-SNAPSHOT"
+RUN mkdir -p /root/.groovy/
+COPY grapeConfig.xml /root/.groovy/grapeConfig.xm
 
+# RUN /bin/bash -c "/gremlin-server/bin/gremlin-server.sh -i org.apache.tinkerpop neo4j-gremlin $GREMLIN_VERSION"
 RUN /bin/bash -c "/gremlin-server/bin/gremlin-server.sh install org.apache.tinkerpop neo4j-gremlin $GREMLIN_VERSION"
 
 COPY ./conf/gremlin-server-custom.yml /gremlin-server/conf/gremlin-server-custom.yml
